# visitum

./: .gitignore  .python-version  Dockerfile  README.md  docker-compose.yml  enriched_museum_data.csv  entrypoint.sh  etl_exploration.py  pyproject.toml  requirements.txt
data/: enriched_museum_data.csv
notebooks/: analysis.ipynb  etl.ipynb  etl_and_training.ipynb
src/: config.py
src/data/: extraction.py  models.py  transformation.py
src/db/: database.py  models.py  queries.py
src/ml/: model.py  training.py
src/scripts/: __init__.py  load_data_from_csv_to_db.py  run_etl.py  train_model.py
tests/data/: test_extraction.py  test_transformation.py
tests/db/: test_queries.py
tests/ml/: test_model.py
